--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             <img src="assets/logo.svg">
         </div>
         <div class="topnav desktop">
-            <a href="#mlm">Máy làm mát</a>
-            <a href="#mln">Máy lọc nước</a>
-            <a href="#bt">Bếp từ</a>
+            <a href="#" onclick="goto('mlm');">Máy làm mát</a>
+            <a href="#" onclick="goto('mln');">Máy lọc nước</a>
+            <a href="#" onclick="goto('bt');">Bếp từ</a>
         </div>
 
         <div class="phone-call desktop">
