Fix scroll to top

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         </div>
     </div>
 </div>
-<div class="top-left-panel">
+<div class="top-left-panel" id="top">
 </div>
 <div class="slider" id="sliders">
     <div class="hero-image">
@@ -451,7 +451,7 @@
         </div>
     </div>
 </footer>
-<div class="scroll-to-top" id="scroll-to-top" onclick="goto('sliders')">
+<div class="scroll-to-top" id="scroll-to-top" onclick="goto('top')">
     <img src="assets/ic-top.svg">
 </div>
 <div class="copy-right">
