--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="topnav desktop">
             <a href="#" onclick="goto('mlm');">Máy làm mát</a>
             <a href="#" onclick="goto('mln');">Máy lọc nước</a>
-            <a href="#" onclick="goto('bt');">Bếp từ</a>
+            <a href="#" onclick="goto('bt');">THIẾT BỊ NHÀ BẾP</a>
         </div>
 
         <div class="phone-call desktop">
@@ -278,7 +278,7 @@
                             Dễ dàng bảo dưỡng.
                         </div>
                         <div class="item">
-                            <a href="https://daiviet.com" class="btn-detail">
+                            <a href="https://tapdoandaiviet.com.vn/may-lam-mat-1-ca89-br8.html" class="btn-detail">
                                 XEM CHI TIẾT<img src="assets/ic-next2.svg">
                             </a>
                         </div>
@@ -323,7 +323,7 @@
                             Nước lạnh.
                         </div>
                         <div class="item">
-                            <a href="https://daiviet.com" class="btn-detail">
+                            <a href="https://tapdoandaiviet.com.vn/may-loc-nuoc-ca87-br8.html" class="btn-detail">
                                 XEM CHI TIẾT<img src="assets/ic-next2.svg">
                             </a>
                         </div>
@@ -337,7 +337,7 @@
                 </div>
                 <div data-aos="fade-up" class="col-xs-16 col-md-6 description aos-init aos-animate">
                     <div class="title-product">
-                        Bếp Từ
+                        THIẾT BỊ NHÀ BẾP
                     </div>
                     <div class="info">
                         <div class="title">
@@ -368,7 +368,7 @@
                             Bàn phím điều khiển dạng trượt.
                         </div>
                         <div class="item">
-                            <a href="https://daiviet.com" class="btn-detail">
+                            <a href="https://tapdoandaiviet.com.vn/thiet-bi-bep-ca136-br8.html" class="btn-detail">
                                 XEM CHI TIẾT<img src="assets/ic-next2.svg">
                             </a>
                         </div>
@@ -392,13 +392,13 @@
         <div class="row">
             <div class="col-md-3">
                 <img class="logo" src="assets/logo%20daiviet.svg"><br/>
-                <a class="website-link website-fb-link" href="#">
+                <a class="website-link website-fb-link" href="https://www.facebook.com/makanogiadungxinchat/">
                     <img class="contact-icon" src="assets/ic-fb.svg">
                 </a>
-                <a class="website-link website-ytb-link" href="#">
+                <a class="website-link website-ytb-link" href="https://www.youtube.com/user/tapdoandaiviet">
                     <img class="contact-icon" src="assets/ic-ytb.svg">
                 </a>
-                <a class="website-link website-tt-link" href="#">
+                <a class="website-link website-tt-link" href="https://twitter.com/tapdoandaiviet?lang=en">
                     <img class="contact-icon" src="assets/ic-tt.svg">
                 </a>
             </div>
