--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 function () {
                     document.getElementById(id).scrollIntoView({behavior: "smooth", block: "center", inline: "center"});
                     clearInterval(timer);
-                }, 200
+                }, 1
             );
         }
 
@@ -247,9 +247,9 @@
             <div class="row product" id="mlm">
                 <div class="col-xs-16 col-md-6 image">
                     <img data-aos="fade-up" src="https://drive.google.com/uc?id=1ndHdIsfHZlGJJw__G4h3euxWE4RfC0mA"
-                         class="aos-init">
+                         class="aos-init aos-animate">
                 </div>
-                <div data-aos="fade-up" class="col-xs-16 col-md-6 description aos-init">
+                <div data-aos="fade-up" class="col-xs-16 col-md-6 description aos-init aos-animate">
                     <div class="title-product">
                         Máy Làm Mát
                     </div>
@@ -257,40 +257,49 @@
                         <div class="title">
                             Tính năng sản phẩm
                         </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1ADw5njjdfGqD0RQu1zk_ybrtzOM8ufYg">
-                            Motor sử dụng lõi đồng nguyên chất siêu bền.
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1ADw5njjdfGqD0RQu1zk_ybrtzOM8ufYg">
+                            </div>
+                            <div class="text">Motor sử dụng lõi đồng nguyên chất siêu bền.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=11wKDCpD9Rrg5NYmZWOrWjSVwSXtiR6h0">
+                            </div>
+                            <div class="text">Làm mát nhanh.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1CFrXWMDhjVxOVQ_ykVivQwFVUfN79ln7">
+                            </div>
+                            <div class="text">Tiết kiệm năng lượng hiệu quả cao.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=17Y4njqVaZ8HmsWmDE8Nay1CZELCDlK4A">
+                            </div>
+                            <div class="text">Thích hợp sử dụng trong nhiều không gian.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=13ZxTxmqEOimZuL6XBGh-Sh90kjMT9dgv">
+                            </div>
+                            <div class="text">Dễ dàng bảo dưỡng.</div>
                         </div>
                         <div class="item">
-                            <img src="https://drive.google.com/uc?id=11wKDCpD9Rrg5NYmZWOrWjSVwSXtiR6h0">
-                            Làm mát nhanh.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1CFrXWMDhjVxOVQ_ykVivQwFVUfN79ln7">
-                            Tiết kiệm năng lượng hiệu quả cao.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=17Y4njqVaZ8HmsWmDE8Nay1CZELCDlK4A">
-                            Thích hợp sử dụng trong nhiều không gian.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=13ZxTxmqEOimZuL6XBGh-Sh90kjMT9dgv">
-                            Dễ dàng bảo dưỡng.
-                        </div>
-                        <div class="item">
-                            <a href="https://tapdoandaiviet.com.vn/may-lam-mat-1-ca89-br8.html" class="btn-detail">
+                            <a href="https://daiviet.com" class="btn-detail">
                                 XEM CHI TIẾT<img src="assets/ic-next2.svg">
-                            </a>
-                        </div>
+                            </a></div>
                     </div>
                 </div>
             </div>
             <div class="row product" id="mln">
                 <div class="col-xs-16 col-md-6 image">
                     <img data-aos="fade-up" src="https://drive.google.com/uc?id=1b52hZ4vLJcfsvjPGMOmNJZu9IqpROXEc"
-                         class="aos-init aos-animate">
+                         class="aos-init">
                 </div>
-                <div data-aos="fade-up" class="col-xs-16 col-md-6 description aos-init aos-animate">
+                <div data-aos="fade-up" class="col-xs-16 col-md-6 description aos-init">
                     <div class="title-product">
                         Máy lọc nước RO
                     </div>
@@ -298,44 +307,56 @@
                         <div class="title">
                             Tính năng sản phẩm
                         </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1hreHOynHNGwYXPsG8SBMzLq9bOVJhKnS">
-                            Lõi lọc thô: PP 10’’, CTO 10’’, Ceramic 10’’, Cation 10”.
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1hreHOynHNGwYXPsG8SBMzLq9bOVJhKnS">
+                            </div>
+                            <div class="text">Lõi lọc thô: PP 10’’, CTO 10’’, Ceramic 10’’, Cation 10”.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1mZX4sXc_9EORxUr1ZMDLDajEtgYql9IA">
+                            </div>
+                            <div class="text">Lọc tinh: Màng lọc RO DOW Aqualast.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=18ICcYEx04nNrsEB2dRrcZ2koaw8QfM4W">
+                            </div>
+                            <div class="text">Lõi lọc nâng cao: T33, Alkaline, Hồng ngoại, Nano bạc, khoáng đá Maifan.
+                            </div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1IzAoDYsuSrNfEt-K_U5ua7FSoGio-xr2">
+                            </div>
+                            <div class="text">Tự động sục rửa màng RO</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1SN0H1kuj0hf6WQ9p3hvu6ZnnDJJfg39S">
+                            </div>
+                            <div class="text">Nước nóng.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=11wKDCpD9Rrg5NYmZWOrWjSVwSXtiR6h0">
+                            </div>
+                            <div class="text">Nước lạnh.</div>
                         </div>
                         <div class="item">
-                            <img src="https://drive.google.com/uc?id=1mZX4sXc_9EORxUr1ZMDLDajEtgYql9IA">
-                            Lọc tinh: Màng lọc RO DOW Aqualast.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=18ICcYEx04nNrsEB2dRrcZ2koaw8QfM4W">
-                            Lõi lọc nâng cao: T33, Alkaline, Hồng ngoại, Nano bạc, khoáng đá Maifan.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1IzAoDYsuSrNfEt-K_U5ua7FSoGio-xr2">
-                            Tự động sục rửa màng RO
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1SN0H1kuj0hf6WQ9p3hvu6ZnnDJJfg39S">
-                            Nước nóng.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=11wKDCpD9Rrg5NYmZWOrWjSVwSXtiR6h0">
-                            Nước lạnh.
-                        </div>
-                        <div class="item">
-                            <a href="https://tapdoandaiviet.com.vn/may-loc-nuoc-ca87-br8.html" class="btn-detail">
+                            <a href="https://daiviet.com" class="btn-detail">
                                 XEM CHI TIẾT<img src="assets/ic-next2.svg">
-                            </a>
-                        </div>
+                            </a></div>
                     </div>
                 </div>
             </div>
             <div class="row product" id="bt">
                 <div class="col-xs-16 col-md-6 image">
                     <img data-aos="fade-up" src="https://drive.google.com/uc?id=1w8nscA31O7air-nylKiklkUEohY8DIuJ"
-                         class="aos-init aos-animate">
+                         class="aos-init">
                 </div>
-                <div data-aos="fade-up" class="col-xs-16 col-md-6 description aos-init aos-animate">
+                <div data-aos="fade-up" class="col-xs-16 col-md-6 description aos-init">
                     <div class="title-product">
                         THIẾT BỊ NHÀ BẾP
                     </div>
@@ -343,44 +364,57 @@
                         <div class="title">
                             Tính năng sản phẩm
                         </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1HPIHLIwfO1nimJQx9pUdqj8LDy7Wp0pM">
-                            Màn hình led hiển thị.
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1HPIHLIwfO1nimJQx9pUdqj8LDy7Wp0pM">
+                            </div>
+                            <div class="text">Màn hình led hiển thị.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1H9-orrV9O9vJQalc8VulrET-Pmt1za-h">
+                            </div>
+                            <div class="text">Điều khiển cảm ứng.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1FR9GhHvgypE_jTKkyu8xRbAqA05GNtLo">
+                            </div>
+                            <div class="text">Chức năng hẹn giờ.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1BhOAKUBnxFtdvuUBPDyM1AagjSrqraZS">
+                            </div>
+                            <div class="text">Khoá an toàn trẻ em.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1wwBpSqIJZkx33VbDUL8VHYSkTQcmWLDJ">
+                            </div>
+                            <div class="text">Cảnh báo quá nhiệt.</div>
+                        </div>
+                        <div class="row item">
+                            <div class="icon"><img
+                                    src="https://drive.google.com/uc?id=1RpgqvW7Wu3G3YQjY3zJmgoKyBaaMTanS">
+                            </div>
+                            <div class="text">Bàn phím điều khiển dạng trượt.</div>
                         </div>
                         <div class="item">
-                            <img src="https://drive.google.com/uc?id=1H9-orrV9O9vJQalc8VulrET-Pmt1za-h">
-                            Điều khiển cảm ứng.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1FR9GhHvgypE_jTKkyu8xRbAqA05GNtLo">
-                            Chức năng hẹn giờ.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1BhOAKUBnxFtdvuUBPDyM1AagjSrqraZS">
-                            Khoá an toàn trẻ em.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1wwBpSqIJZkx33VbDUL8VHYSkTQcmWLDJ">
-                            Cảnh báo quá nhiệt.
-                        </div>
-                        <div class="item">
-                            <img src="https://drive.google.com/uc?id=1RpgqvW7Wu3G3YQjY3zJmgoKyBaaMTanS">
-                            Bàn phím điều khiển dạng trượt.
-                        </div>
-                        <div class="item">
-                            <a href="https://tapdoandaiviet.com.vn/thiet-bi-bep-ca136-br8.html" class="btn-detail">
+                            <a href="https://daiviet.com" class="btn-detail">
                                 XEM CHI TIẾT<img src="assets/ic-next2.svg">
-                            </a>
-                        </div>
+                            </a></div>
                     </div>
                 </div>
             </div>
+
         </div>
         <div class="row video">
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <div class="embed-responsive embed-responsive-16by9" id="video-frame">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wC-kx_lyFgM" allowfullscreen=""></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wC-kx_lyFgM"
+                            allowfullscreen=""></iframe>
                 </div>
             </div>
             <div class="col-md-2"></div>
@@ -391,16 +425,20 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <img class="logo" src="assets/logo%20daiviet.svg"><br/>
-                <a class="website-link website-fb-link" href="https://www.facebook.com/makanogiadungxinchat/">
-                    <img class="contact-icon" src="assets/ic-fb.svg">
-                </a>
-                <a class="website-link website-ytb-link" href="https://www.youtube.com/user/tapdoandaiviet">
-                    <img class="contact-icon" src="assets/ic-ytb.svg">
-                </a>
-                <a class="website-link website-tt-link" href="https://twitter.com/tapdoandaiviet?lang=en">
-                    <img class="contact-icon" src="assets/ic-tt.svg">
-                </a>
+                <div class="footer-logo">
+                    <img class="logo" src="assets/logo%20daiviet.svg">
+                </div>
+                <div class="social-icons">
+                    <a class="website-link website-fb-link" href="https://www.facebook.com/makanogiadungxinchat/">
+                        <img class="contact-icon" src="assets/ic-fb.svg">
+                    </a>
+                    <a class="website-link website-ytb-link" href="https://www.youtube.com/user/tapdoandaiviet">
+                        <img class="contact-icon" src="assets/ic-ytb.svg">
+                    </a>
+                    <a class="website-link website-tt-link" href="https://twitter.com/tapdoandaiviet?lang=en">
+                        <img class="contact-icon" src="assets/ic-tt.svg">
+                    </a>
+                </div>
             </div>
             <div class="col-md-6">
                 <div class="info">
@@ -455,7 +493,7 @@
     <img src="assets/ic-top.svg">
 </div>
 <div class="copy-right">
-    <p>© 2019 Công ty Cổ Phần Cơ Điện Lạnh Đại Việt</p>
+    © 2019 Công ty Cổ Phần Cơ Điện Lạnh Đại Việt
 </div>
 </body>
 
