Fix mobile menu

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <ul id="menu">
                 <li><a href="#" onclick="goto('mlm');">MÁY LÀM MÁT</a></li>
                 <li><a href="#" onclick="goto('mln');">MÁY LỌC NƯỚC</a></li>
-                <li><a href="#" onclick="goto('bt');">BẾP TỪ</a></li>
+                <li><a href="#" onclick="goto('bt');">THIẾT BỊ NHÀ BẾP</a></li>
                 <li><a href="https://tapdoandaiviet.com.vn/he-thong.html">TÌM ĐẠI LÝ</a></li>
                 <li class="full-width"><a class="phone-call">1900 63 60 98</a></li>
                 <li>
