Fix responsive footer

--- a/index.html
+++ b/index.html
@@ -431,10 +431,12 @@
             <div class="col-md-2"></div>
         </div>
     </div>
-    <footer>
+</main>
+<footer>
+    <div class="footer-content">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="footer-logo">
                         <img class="logo" src="assets/logo%20daiviet.svg">
                     </div>
@@ -450,7 +452,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="info">
                         <div class="title">
                             Thông tin liên hệ
@@ -498,14 +500,14 @@
                 </div>
             </div>
         </div>
-    </footer>
-    <div class="scroll-to-top" id="scroll-to-top" onclick="goto('top')">
-        <img src="assets/ic-top.svg">
+        <div class="scroll-to-top" id="scroll-to-top" onclick="goto('top')">
+            <img src="assets/ic-top.svg">
+        </div>
+        <div class="copy-right">
+            © 2019 Công ty Cổ Phần Cơ Điện Lạnh Đại Việt
+        </div>
     </div>
-    <div class="copy-right">
-        © 2019 Công ty Cổ Phần Cơ Điện Lạnh Đại Việt
-    </div>
-</main>
+</footer>
 </body>
 
 </html>
